# userApi/docs/swagger.json
@@ -120,7 +120,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.userdata"
+                            "$ref": "#/definitions/main.signUpBodySwagger"
                         }
                     }
                 ],
@@ -210,7 +210,7 @@
                 }
             }
         },
-        "main.userdata": {
+        "main.signUpBodySwagger": {
             "type": "object",
             "required": [
                 "email",
@@ -218,19 +218,12 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
-                },
-                "liked": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        ""
-                    ]
+                    "type": "string",
+                    "example": "adityameh@gmail.com"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Qwert@009"
                 }
             }
         }
